--- a/index.html
+++ b/index.html
@@ -54,10 +54,33 @@
       rel="stylesheet"
     />
     <!-- reset -->
-    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="assets/css/reset.css" />
     <!-- CSS -->
-    <link rel="stylesheet" href="styles.css" />
+     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="header-top">
+          <!-- logo -->
+           <img src="assets/img/Logo.svg" alt="" class="logo">
+           <!-- nav -->
+            <nav class="nav">
+              <ul class="navbar">
+                <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Services</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Doctor</a></li>
+              </ul>
+            </nav>
+            <!-- login -->
+            <div class="header-login">
+              <a href="#" class="btn-login">Log In</a>
+              <a href="#" class="btn btn-sign-up">Sigh Up</a>
+            </div>
+        <div class="header-bottom"></div>
+      </div>
+    </header>
+  </body>
 </html>
