--- a/index.html
+++ b/index.html
@@ -79,7 +79,21 @@
               <a href="#" class="btn-login">Log In</a>
               <a href="#" class="btn btn-sign-up">Sigh Up</a>
             </div>
-        <div class="header-bottom"></div>
+        </div>
+        <div class="header-hero">
+          <div class="hero-content">
+            <h1 class="hero__heading">Exceptional dental care for all ages.</h1>
+            <p class="hero__para">Exceptional dental care for all ages. Your great smile begins with a great dentist.</p>
+            <div class="hero__book">
+              <a href="#" class="btn btn-book">Book Online</a>
+              <span class="hero__phone-number">or call (123) 456-7890</span>
+            </div>
+          </div>
+          <div class="hero-media">
+            <img src="assets/img/9b83a3d381b176274fae0aa963ba3a4aa7e03cf4.png" alt="" class="hero-img1" style="width: 330px;height: 540px;">
+            <img src="assets/img/33ca13db6f000f22eda2813078c440adedd68730.png" alt="" class="hero-img2" style="width: 210px;height: 410px;">
+          </div>
+        </div>
       </div>
     </header>
   </body>
